# TMA-Debat

./: MODIFICATIONS.md  README_TICKETS.md  SETUP_TICKETS.md  START.bat  START.ps1  app.db  main.py  models.py  pyproject.toml  schemas.py  test_hybride_complet.sh
app/: alembic.ini  database.py  main.py
app/agents/: __init__.py  analyseur.py  juge.py  juge_independant.py  juge_utils.py  orchestrateur.py  orchestrateur_hybride.py  profil.py  scorer.py
app/core/: config.py
app/migrations/: env.py
app/migrations/versions/: 2e4540967efc_create_tables.py  9889e6b54145_initial_tables.py  c7f4a9d1e1b2_add_ticket_owner.py
app/models/: __init__.py  debat_temp.py  technicien.py  ticket.py
app/routers/: __init__.py  debat.py  tickets.py  users.py
app/utils/: session_manager.py
scripts/: init_db.py  inspect_score.py  seed_admin.py  seed_techniciens.py
tma-frontend/: index.html  package-lock.json  package.json
tma-frontend/src/: index.css  main.tsx
tma-frontend/src/api/: client.ts
tma-frontend/src/components/: PlatformSidebar.tsx  ProtectedRoute.tsx  SiteNavbar.tsx
tma-frontend/src/pages/: AdminTickets.tsx  Dashboard.tsx  Debate.tsx  Demo.tsx  Home.tsx  Login.tsx  Profile.tsx  SignUp.tsx  TechnicianDashboard.tsx  TechnicianTickets.tsx  TicketDetails.tsx  TicketDetailsAdmin.tsx  Tickets.tsx  Users.tsx
tma-frontend/src/routes/: AppRouter.tsx
tma-frontend/src/utils/: auth.ts
